fix overflow from animations

--- a/src/scss/site/_module.scss
+++ b/src/scss/site/_module.scss
@@ -39,6 +39,8 @@ main {
     }
 
     section#projects {
+        overflow: hidden;
+
         .lightbox.visible {
             position: fixed;
             top: 0;
